[package]
name = "sundial"
version = "0.1.0"
authors = ["shiveen <shiveen.pandita@ordermentum.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.32.0", features = ["yaml"] }
chrono = "0.4"
chrono-tz = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pest = "2.1.0"
pest_derive = "2.0"
