[package]
name = "sundial"
description = "Pure Rust library to parse and process iCalendar RRules"
version = "0.0.2"
authors = ["shiveen <shiveen.pandita@ordermentum.com>"]
edition = "2018"
repository = "https://github.com/ordermentum/sundial"
readme = "./README.md"
keywords = ["rrule", "icalendar"]
license = "MIT"
license-file = "./LICENSE.md"
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "2.32.0", features = ["yaml"] }
chrono = "0.4"
chrono-tz = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pest = "2.1.0"
pest_derive = "2.0"
human-panic = "1.0.1"
