[package]
name = "sundial_wasm"
description = "Pure Rust library to parse and process iCalendar RRules"
categories = ["date-time-utility","iCalendar","rrule-processing"]
version = "0.1.0"
authors = ["shiveen <shiveen.pandita@ordermentum.com>"]
edition = "2018"
repository = "https://github.com/ordermentum/sundial"
readme = "./README.md"
keywords = ["rrule","icalendar","utiltiy","cli"]
license-file = "../LICENSE.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sundial = { path = "../" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"